<resources>
    <string name="app_name">NewsX</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook_app_id">1607581862709113</string>
    <string name="fb_login_protocol_scheme">fb1607581862709113</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_topic_location_amp_sources"><![CDATA[Search for topic,location & sources]]></string>

</resources>
